Able to render HTML in code view, and fix z-index css issue

--- a/client/src/sass/all.scss
+++ b/client/src/sass/all.scss
@@ -56,7 +56,3 @@ html,body{
 .row {
   padding: 0 0;
 }
-
-.button {
-  z-index: -1;
-}
